5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1592_1800.log
== SUBMITION (2019-03-25 14:35:08) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= float((a**2)*(b**2)*(c**2))
f= float(a+b+c)
h= float(v/f)
print(roundh,7)






-- EXECUTION TIME:
0.147315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1800/main.py", line 8, in <module>
    print(roundh,7)
NameError: name 'roundh' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:18) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= float((a**2)*(b**2)*(c**2))
f= float(a+b+c)
h= float(v/f)
print(round,7)






-- EXECUTION TIME:
0.134129
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
<built-in function round> 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
<built-in function round> 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
<built-in function round> 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:35:23) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= float((a**2)*(b**2)*(c**2))
f= float(a+b+c)
h= float(v/f)
print(round,7)






-- EXECUTION TIME:
0.209964
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
<built-in function round> 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
<built-in function round> 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
<built-in function round> 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:35:25) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= float((a**2)*(b**2)*(c**2))
f= float(a+b+c)
h= float(v/f)
print(round,6)






-- OUTPUT:
<built-in function round> 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:36:18) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)
f= (a+b+c)
h= (v/f)
print(round,7)






-- EXECUTION TIME:
0.219666
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
<built-in function round> 7
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
<built-in function round> 7
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
<built-in function round> 7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:20) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)
f= (a+b+c)
h= (v/f)
print(round,7)






-- OUTPUT:
<built-in function round> 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:35) 
-- CODE:
a= float(input(7))
b= float(input(7))
c= float(input(7))

v= (a**2)*(b**2)*(c**2)
f= (a+b+c)
h= (v/f)
print(round,7)






-- OUTPUT:
777<built-in function round> 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:47) 
-- CODE:
a= float(input(7))
b= float(input(7))
c= float(input(7))

v= (a**2)*(b**2)*(c**2)/(a+b+c)

print(round,7)






-- OUTPUT:
777<built-in function round> 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:20) 
-- CODE:
a= float(input(7))
b= float(input(7))
c= float(input(7))

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v,7)






-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:35) 
-- CODE:
a= float(input(7))
b= float(input(7))
c= float(input(7))

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v, 7)






-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:44) 
-- CODE:
a= float(input(7))
b= float(input(7))
c= float(input(7))

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v, 7)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:06) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v, 7)
-- EXECUTION TIME:
0.199608
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:39:07) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v, 7)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:09) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v, 7)
-- EXECUTION TIME:
0.202418
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:39:19) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

v= (a**2)*(b**2)*(c**2)/(a+b+c)
print(round(v,7)
-- EXECUTION TIME:
0.1725
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:05) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7)
-- EXECUTION TIME:
0.134448
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 6
    
                                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:08) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7)
-- EXECUTION TIME:
0.192363
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 6
    
                                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:17) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7)
-- EXECUTION TIME:
0.12501
-- ERROR:
  File "/home/codebench/codes/1592/1800/main.py", line 6
    
                                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:40:32) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7))
-- EXECUTION TIME:
0.170627
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
3000000.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
1098893401015.2284
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2200754.7169811
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:49:14) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7))
-- OUTPUT:
3000000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:49:27) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7))
-- OUTPUT:
3000000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:50:35) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)*(b**2)*(c**2)/(a+b+c),7))
-- OUTPUT:
3000000.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:50:59) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round((a**2)+(b**2)+(c**2)/(a+b+c),7))
-- EXECUTION TIME:
0.138076
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
1037.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
215349.3654822
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
22500.0188679
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:51:43) 
-- CODE:
a= float(input())
b= float(input())
c= float(input())

print(round(((a**2)+(b**2)+(c**2))/(a+b+c),7))
-- EXECUTION TIME:
0.195957
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
